--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
 				                                        <div class="cell-lg-10 offset-top-30">
 				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden reveal-sm-block text-light">
 				                                            	<p>
-				                                            		<span class="caption-txt">整合业内优秀的设计资源，凭借丰富的实战经验和强大的设计表现力，按照客户的需求，采用最合适的演示设计，达到最完美的演示效果！</span>
-				                                            		<span class="caption-txt">全力以赴协助我们的客户开展PPT演示工作</span>
+				                                            		<span class="caption-txt">声画合一&nbsp;&nbsp;彰显企业风范</span>
 				                                            	</p>
 				                                            </h4>
 				                                        </div>
@@ -156,16 +155,19 @@
 						<div class="ab-title">
 							<span>专注演示的</span>
 							<span>
-								品牌设计公司 
+								广告传媒公司   
 								<span class="ab-underline"></span>
 							</span>
 						</div>
 						<div class="ab-detail">
+							<p class="detail0">
+								绎奇，与您一起！
+							</p>
 							<p class="detail1">
-								我们整合了多方优势资源，建立了一支由从业十年以上的资深人士组成的核心创作执行团队
+								我们整合了多方优势资源，建立了一支由从业十年以上的资深人士组成的核心创作执行团队。
 							</p>
 							<p class="detail2">
-								致力于成为制作商务PPT演示与3D动画的设计公司，为客户提供创新与专业的设计方案，满足客户的需求，凭借丰富的实战经验与强大的表现力，打破固有的单一模式，提供一站式的高效服务，为客户呈现完美的演示效果
+								致力于成为一家集全案策划、PPT定制、视频制作、动画设计、书籍画册设计、企业形象设计等为一体的综合性广告传媒公司。专门为客户提供创新与专业的设计方案，满足客户的需求，凭借丰富的实战经验与强大的表现力，打破固有的单一模式，提供一站式的高效服务，为客户呈现完美的演示效果。
 							</p>
 						</div>
 						<!-- <button class="ab-btn" type="button">查看更多</button> -->
@@ -487,53 +489,53 @@
 					</div>
 					<div class="service-detail clearfix">
 						<div class="sd-item">
-							<div class="sd-title">PPT高端设计</div>
+							<div class="sd-title">品牌全案</div>
+							<div class="sd-subtitle">缜密推演，专业信服</div>
 							<div class="sd-box">
 								<div class="sd-split"></div>
 								<p class="sd-txt">
-									在弹出的对话框中单击“更改图标”，然后在弹出的列表中找到替换的图标“确定”即可
+									构建全系列的品牌传播体系，从定位、概念、优势、文化、应用等一整套品牌表述到设计执行，以专业的品牌全案整合流程打造行业内标杆型品牌。
 								</p>
-								<button class="sd-btn" type="button">更多</button>
 							</div>
 						</div>
 						<div class="sd-item">
-							<div class="sd-title">PPT高端设计</div>
+							<div class="sd-title">PPT / KEYNOTE</div>
+							<div class="sd-subtitle">专属定制，尽享尊贵</div>
 							<div class="sd-box">
 								<div class="sd-split"></div>
 								<p class="sd-txt">
-									在弹出的对话框中单击“更改图标”，然后在弹出的列表中找到替换的图标“确定”即可
+									企业向客户做的每一次演示，都是不容忽视的形象展示。我们将为您提供最佳的演示设计方案，让您的客户感受到贵企业极致专业、权威信服的优良形象。
 								</p>
-								<button class="sd-btn" type="button">更多</button>
 							</div>
 						</div>
 						<div class="sd-item">
-							<div class="sd-title">PPT高端设计</div>
+							<div class="sd-title">视频动画</div>
+							<div class="sd-subtitle">至精至美，跃然欲出</div>
 							<div class="sd-box">
 								<div class="sd-split"></div>
 								<p class="sd-txt">
-									在弹出的对话框中单击“更改图标”，然后在弹出的列表中找到替换的图标“确定”即可
+									视频是最具感染力的宣传媒介。我们将采用拍摄、动画、配音、交互等多种手段，为您提供生动、创意的视频制作服务。采用多种媒介结合达到完美效果。
 								</p>
-								<button class="sd-btn" type="button">更多</button>
 							</div>
 						</div>
 						<div class="sd-item">
-							<div class="sd-title">PPT高端设计</div>
+							<div class="sd-title">书籍画册</div>
+							<div class="sd-subtitle">印染之美，卓然深刻</div>
 							<div class="sd-box">
 								<span class="sd-split"></span>
 								<p class="sd-txt">
-									在弹出的对话框中单击“更改图标”，然后在弹出的列表中找到替换的图标“确定”即可
+									书籍与画册是企业形象持久、详尽传播的重要载体。我们讲用最准确的企业内涵解读、最专业的版式与配色设计，向您提交最精美的设计方案
 								</p>
-								<button class="sd-btn" type="button">更多</button>
 							</div>
 						</div>
 						<div class="sd-item">
-							<div class="sd-title">PPT高端设计</div>
+							<div class="sd-title">VI企业形象</div>
+							<div class="sd-subtitle">创意打磨，只为传播</div>
 							<div class="sd-box">
 								<div class="sd-split"></div>
 								<p class="sd-txt">
-									在弹出的对话框中单击“更改图标”，然后在弹出的列表中找到替换的图标“确定”即可
+									我们将非可视内容转化为静态的视觉识别符号，以无比丰富的多样的应用形式，在最为广泛的层面上，进行最直接的传播。为您提供各项VI设计服务。
 								</p>
-								<button class="sd-btn" type="button">更多</button>
 							</div>
 						</div>
 					</div>
@@ -613,13 +615,13 @@
 					</form>
 					<div class="clearfix">
 						<div class="fl contact-tel">
-							<p>地址：南京市鼓楼区建宁路61号中央金地1号楼1217</p>
+							<p>地址：南京市 浦口区 团结路99号 孵鹰大厦 A205</p>
 							<p>
-								<span class="point telnum">电话：025-86306489</span>
+								<span class="point telnum">电话：025-58206840</span>
 								<span class="mark">（工作时间：9:00—18:00）</span>
 							</p>
 							<p>
-								<span class="point phonenum">手机：18917079738</span>
+								<span class="point phonenum">手机：18951614092</span>
 								<span class="mark phonemark">（平面 / 演示设计咨询）</span>
 							</p>
 							<p class="mail">邮箱：3348656075@qq.com</p>
@@ -655,15 +657,15 @@
 					<div class="item item2">
 						<span class="footer-title copy">版权声明</span>
 						<p class="copyright">
-							绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒、会员所发布的作品版权归原作者所有，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
+							绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
 						</p>
-						<p class="copyright2">译奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
+						<p class="copyright2">绎奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
 					</div>
 					<div class="item item3">
 						<span class="footer-title contact">联系我们</span>
 						<div class="footer-contact">
-							<p class="address">南京市浦口区孵鹰大厦A2座a205</p>
-							<p class="tel">+86&nbsp;&nbsp;025-86306489&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
+							<p class="address">南京市 浦口区 团结路99号 孵鹰大厦 A205</p>
+							<p class="tel">+86&nbsp;&nbsp;025-58206840&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
 							<p class="mail">邮箱： 3348656075@qq.com</p>
 						</div>
 					</div>
@@ -671,7 +673,7 @@
 			</div>
 			<div class="footer-floor">
 				<div class="footer-bottom">
-					Copyright@2015译奇网&nbsp;&nbsp;&nbsp;苏ICP备10000000号
+					Copyright@2015绎奇网&nbsp;&nbsp;&nbsp;苏ICP备10000000号
 				</div>
 			</div>
 		</div>
@@ -687,7 +689,7 @@
 		(function () {
 
 		    // 百度地图API功能
-		    var sContent ="中央金地广场";
+		    var sContent ="孵鹰大厦";
 		    var map = new BMap.Map("l-map");
 		    var point = new BMap.Point(118.77, 32);
 
@@ -697,7 +699,7 @@
 		        renderOptions: {map: map, panel: "r-result"}
 		    });
 
-		    local.search("中央金地广场");
+		    local.search("孵鹰大厦");
 		})();
 	</script>
 </body>
