--- a/example.html
+++ b/example.html
@@ -575,15 +575,15 @@
 				<div class="item item2">
 					<span class="footer-title copy">版权声明</span>
 					<p class="copyright">
-						绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒、会员所发布的作品版权归原作者所有，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
+						绎奇官方发布的商业案例和讲师发布的课程版权属于绎奇传媒，任何转载等商业用途均需联系作者。如未经授权用作他处，作者将追究侵权者的法律责任。
 					</p>
-					<p class="copyright2">译奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
+					<p class="copyright2">绎奇网为O2O商业平台，若您有任何需要，均可直接与在线客服联系。</p>
 				</div>
 				<div class="item item3">
 					<span class="footer-title contact">联系我们</span>
 					<div class="footer-contact">
-						<p class="address">南京市浦口区孵鹰大厦A2座a205</p>
-						<p class="tel">+86&nbsp;&nbsp;025-86306489&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
+						<p class="address">南京市 浦口区 团结路99号 孵鹰大厦 A205</p>
+						<p class="tel">+86&nbsp;&nbsp;025-58206840&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
 						<p class="mail">邮箱： 3348656075@qq.com</p>
 					</div>
 				</div>
@@ -591,7 +591,7 @@
 		</div>
 		<div class="footer-floor">
 			<div class="footer-bottom">
-				Copyright@2015译奇网&nbsp;&nbsp;&nbsp;苏ICP备10000000号
+				Copyright@2015绎奇网&nbsp;&nbsp;&nbsp;苏ICP备10000000号
 			</div>
 		</div>
 	</div>
