--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	</style>
 </head>
 <body>
-	<div id="fullpage">
+	<div class="loading"></div>
+	<div class="main hidden">
 		<!-- 轮播 -->
 		<div id="silde" class="banner section">
 			<!-- 头部导航 -->
@@ -75,13 +76,13 @@
 				                                    <div class="range range-lg-center mb100">
 				                                        <div class="cell-lg-12">
 				                                            <h1>
-				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="500" class="big text-uppercase">
+				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="500" class="hidden big text-uppercase">
 				                                            		<span class="orange">助力您的</span>每一场演示
 				                                            	</span>
 				                                            </h1>
 				                                        </div>
 				                                        <div class="cell-lg-10 offset-top-30">
-				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden reveal-sm-block text-light">
+				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden text-light">
 				                                            	<p>
 				                                            		<span class="caption-txt">声画合一&nbsp;&nbsp;彰显企业风范</span>
 				                                            	</p>
@@ -89,7 +90,7 @@
 				                                        </div>
 				                                    </div>
 				                                    <div class="group group-xl offset-top-20 offset-xs-top-50">
-				                                    	<div class="btn-border" data-caption-animate="fadeInUp" data-caption-delay="1000">
+				                                    	<div class="hidden btn-border" data-caption-animate="fadeInUp" data-caption-delay="1000">
 															<a href="#" class="btn btn-anis-effect">
 		                                                		<span class="btn-text">Read more</span>
 		                                                	</a>
@@ -99,12 +100,12 @@
 				                            </div>
 				                        </div>
 				                    </div>
-				                    <div data-slide-bg="./images/swiper/intro-02-1920x955.jpg" data-preview-bg="./images/swiper/intro-02-1920x955.jpg" class="swiper-slide">
+				                    <!-- <div data-slide-bg="./images/swiper/intro-02-1920x955.jpg" data-preview-bg="./images/swiper/intro-02-1920x955.jpg" class="swiper-slide">
 				                        <div data-speed="0.5" data-fade="true" class="swiper-caption swiper-parallax">
 				                            <div class="swiper-slide-caption">
 				                                <div class="shell">
 				                                    <div class="range range-lg-center">
-
+				                    
 				                                    </div>
 				                                </div>
 				                            </div>
@@ -115,12 +116,12 @@
 				                            <div class="swiper-slide-caption">
 				                                <div class="shell">
 				                                    <div class="range range-lg-center">
-
+				                    
 				                                    </div>
 				                                </div>
 				                            </div>
 				                        </div>
-				                    </div>
+				                    </div> -->
 				                </div>
 				                <div data-speed="0.5" class="swiper-button swiper-button-prev swiper-parallax">
 				                    <div class="preview">
@@ -179,7 +180,7 @@
 							<img class="ab-book" src="images/about/about_book.png" height="222" width="148" alt="">
 							<img class="ab-line" src="images/about/about_line.png" height="215" width="387" alt="">
 							<div class="scroll-box">
-								<img class="scroll-img" src="images/about/scroll.jpg">
+								<img class="scroll-img" src="./images/loading.gif">
 							</div>
 						</div>
 					</div>
@@ -677,11 +678,11 @@
 				</div>
 			</div>
 		</div>
+		<img class="go-top" src="images/footer/top.png">
 	</div>
-	<img class="go-top" src="images/footer/top.png">
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 	<script src="./js/plugin/core.min.js?v=201611170957"></script>
-	<script src="./js/yiqi.js?v=201611210957"></script>
+	<script src="./js/yiqi.js?v=201701041555"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XjYb8I0LmkLSxb47eyDSSCtsYUInYn19"></script>
 	<script>
 
