--- a/example_detail.html
+++ b/example_detail.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="phone">
 			<img class="phone-icon" src="images/header/phone_icon.png" height="16" width="15">
-			<span>热线电话：025-86306489</span>
+			<span>热线电话：<span class="tel-num">025-58206840</span></span>
 		</div>
 		<img class="nav-btn" src="images/header/navBtn.png">
 	</div>
@@ -64,8 +64,7 @@
 				<img class="exd-title" src="images/example_detail/title.png">
 				<img class="exd-banner" src="images/example_detail/title_banner.png">
 				<div class="exd-team-txt">
-					<p>我们的团队会用100%的激情来对待客户的运动项目，不断的汲取和创新，拿出最TOP的创意，摒弃浮夸和多余的设计，最终达到我们共同的梦想。</p>
-					<p>我们有一个共同的信念，发扬每个品牌、每家企业的宗旨。</p>
+					<p>我们团队将以100%的激情动态跟进客户的项目，通过反复的雕琢与创意的碰撞，摒弃浮夸和多余的设计，向客户拿出最TOP的作品，最终实现我们与客户的共赢。</p>
 				</div>
 			</div>
 			<div class="exd-img">
@@ -140,12 +139,6 @@
 	</div>
 	<img class="go-top" src="images/footer/top.png">
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
-	<script>
-	
-		// 回到顶部
-		$(".go-top").click(function() {
-			$("html, body").animate({ scrollTop: 0 }, 500);
-		});
-	</script>
+	<script src="./js/base.js?v=201611170957"></script>
 </body>
 </html>
