--- a/example.html
+++ b/example.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="phone">
 			<img class="phone-icon" src="images/header/phone_icon.png" height="16" width="15">
-			<span>热线电话：025-86306489</span>
+			<span>热线电话：<span class="tel-num">025-58206840</span></span>
 		</div>
 		<img class="nav-btn" src="images/header/navBtn.png">
 	</div>
@@ -598,4 +598,5 @@
 	<img class="go-top" src="images/footer/top.png">
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 	<script src="./js/example.js?v=201611170957"></script>
+	<script src="./js/base.js?v=201611170957"></script>
 </body>
