--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				</div>
 				<div class="phone">
 					<img class="phone-icon" src="images/header/phone_icon.png" height="16" width="15">
-					<span>热线电话：025-86306489</span>
+					<span>热线电话：<span class="tel-num">025-58206840</span></span>
 				</div>
 				<img class="nav-btn" src="images/header/navBtn.png">
 			</div>
@@ -683,6 +683,7 @@
 	<script src="./js/plugin/jquery.min.js?v=201611170957"></script>
 	<script src="./js/plugin/core.min.js?v=201611170957"></script>
 	<script src="./js/yiqi.js?v=201701041555"></script>
+	<script src="./js/base.js?v=201701041555"></script>
 	<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=XjYb8I0LmkLSxb47eyDSSCtsYUInYn19"></script>
 	<script>
 
