--- a/example_detail.html
+++ b/example_detail.html
@@ -69,7 +69,7 @@
 			</div>
 			<div class="exd-video">
 				<video class="video" width="672" height="380" controls="controls">
-					<source type="video/mp4" src="http://124.89.197.24/vmb.tc.qq.com/i0409zqmng4.mp4?sdtfrom=v1010&guid=a80867a2487b5f0deadbe777db60b498&vkey=16BA7CB39E414920080B836075A136298514F6D6E73E483A77C4331E40A674C16DA142AF8F5A927FD95FF2A0FD4041BEE85A02A594EF3428891957048CF57E26859FD78C3DAAB1F646AF09852BCAEFFE84F19892DB245902"></source>
+					<source type="video/mp4" src="./demo.mp4"></source>
 					你的浏览器不支持此视频播放。
 				</video>
 			</div>
