--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 							<div class="sd-box">
 								<div class="sd-split"></div>
 								<p class="sd-txt">
-									企业向客户做的每一次演示，都是不容忽视的形象展示。我们将为您提供最佳的演示设计方案，让您的客户感受到贵企业极致专业、权威信服的优良形象。
+									企业做的每一次演示，都是不容忽视的形象展示。我们将为您提供最佳的演示设计方案，让您的客户感受到贵企业极致专业、权威信服的优良形象。
 								</p>
 							</div>
 						</div>
@@ -515,7 +515,7 @@
 							<div class="sd-box">
 								<div class="sd-split"></div>
 								<p class="sd-txt">
-									视频是最具感染力的宣传媒介。我们将采用拍摄、动画、配音、交互等多种手段，为您提供生动、创意的视频制作服务。采用多种媒介结合达到完美效果。
+									视频是最具感染力的宣传媒介。我们将采用拍摄、动画、配音、交互等多种手段，为您提供生动、创意的视频制作服务。最终达到令您满意的效果。
 								</p>
 							</div>
 						</div>
@@ -529,7 +529,7 @@
 								</p>
 							</div>
 						</div>
-						<div class="sd-item">
+						<div class="sd-item" style="border:0px;">
 							<div class="sd-title">VI企业形象</div>
 							<div class="sd-subtitle">创意打磨，只为传播</div>
 							<div class="sd-box">
@@ -691,7 +691,7 @@
 		(function () {
 
 		    // 百度地图API功能
-		    var sContent = "孵鹰大厦";
+		    var sContent = "南京绎奇传媒";
 		    var map = new BMap.Map("l-map");
 		    var point = new BMap.Point(118.77, 32);
 
@@ -701,7 +701,7 @@
 		        renderOptions: {map: map, panel: "r-result"}
 		    });
 
-		    local.search("孵鹰大厦");
+		    local.search("南京绎奇传媒");
 		})();
 	</script>
 </body>
