--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				                                        <div class="cell-lg-10 offset-top-30">
 				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden text-light">
 				                                            	<p>
-				                                            		<span class="caption-txt">声画合一&nbsp;&nbsp;彰显企业风范</span>
+				                                            		<span class="caption-txt intro1-txt">声画合一&nbsp;&nbsp;彰显企业风范</span>
 				                                            	</p>
 				                                            </h4>
 				                                        </div>
@@ -100,28 +100,45 @@
 				                            </div>
 				                        </div>
 				                    </div>
-				                    <!-- <div data-slide-bg="./images/swiper/intro-02-1920x955.jpg" data-preview-bg="./images/swiper/intro-02-1920x955.jpg" class="swiper-slide">
+				                    <div data-slide-bg="./images/swiper/intro-02-1920x955.jpg" data-preview-bg="./images/swiper/intro-02-1920x955.jpg" class="swiper-slide">
 				                        <div data-speed="0.5" data-fade="true" class="swiper-caption swiper-parallax">
 				                            <div class="swiper-slide-caption">
 				                                <div class="shell">
 				                                    <div class="range range-lg-center">
-				                    
+				                    					<div class="cell-lg-12">
+				                                            <h1>
+				                                            	<span data-caption-animate="fadeInUp" data-caption-delay="500" class="hidden big text-uppercase intro2-title">
+				                                            		<img src="./images/swiper/intro-02-title.png">
+				                                            	</span>
+				                                            </h1>
+				                                        </div>
+				                                        <div class="cell-lg-10 offset-top-30">
+				                                            <h4 data-caption-animate="fadeInUp" data-caption-delay="700" class="hidden text-light">
+				                                            	<p>
+				                                            		<span class="caption-txt intro2-txt">更震撼的企业宣传  &nbsp;&nbsp;更生动的产品推荐</span>
+				                                            		<img src="./images/swiper/intro-02-line.png">
+				                                            	</p>
+				                                            </h4>
+				                                        </div>
+				                                    </div>
+				                                    <div class="group group-xl offset-top-20 offset-xs-top-50">
+				                                    	<div class="hidden" data-caption-animate="fadeInUp" data-caption-delay="1000">
+															<div class="intro2-menu btn-anis-effect">
+																<a href="#" class="menu1">
+			                                                		<span class="btn-text">进一步了解</span>
+			                                                		<img src="./images/swiper/intro-02-btn-icon1.png">
+			                                                	</a>
+			                                                	<a href="#" class="menu2">
+			                                                		<span class="btn-text">详情观看</span>
+			                                                		<img src="./images/swiper/intro-02-btn-icon2.png">
+			                                                	</a>
+		                                                	</div>
+				                                    	</div>
 				                                    </div>
 				                                </div>
 				                            </div>
 				                        </div>
 				                    </div>
-				                    <div data-slide-bg="./images/swiper/intro-03-1920x955.jpg" data-preview-bg="./images/swiper/intro-03-1920x955.jpg" class="swiper-slide">
-				                        <div data-speed="0.5" data-fade="true" class="swiper-caption swiper-parallax">
-				                            <div class="swiper-slide-caption">
-				                                <div class="shell">
-				                                    <div class="range range-lg-center">
-				                    
-				                                    </div>
-				                                </div>
-				                            </div>
-				                        </div>
-				                    </div> -->
 				                </div>
 				                <div data-speed="0.5" class="swiper-button swiper-button-prev swiper-parallax">
 				                    <div class="preview">
