--- a/lession.html
+++ b/lession.html
@@ -63,7 +63,7 @@
 		<div class="le-header">
 			<img class="le-title" src="./images/lession_detail/title.png">
 			<div class="le-subtitle">一站式企业定制化办公技能培训解决方案</div>
-			<a class="le-btn" href="#">预约课程</a>
+			<a class="le-btn qq-kefu" href="#">预约课程</a>
 		</div>
 		<!-- 中部介绍 -->
 		<div class="le-intro">
@@ -151,7 +151,7 @@
 									<div class="slide-menu-txt">
 										我的需求与此项目类似
 									</div>
-									<button type="button" class="slide-btn">咨询服务</button>
+									<button type="button" class="slide-btn qq-kefu">咨询服务</button>
 								</div>
 								<div class="slide-right">
 									<img src="./images/lession_detail/content_slide_1.jpg" height="934" width="100%">
@@ -172,7 +172,7 @@
 									<div class="slide-menu-txt">
 										我的需求与此项目类似
 									</div>
-									<button type="button" class="slide-btn">咨询服务</button>
+									<button type="button" class="slide-btn qq-kefu">咨询服务</button>
 								</div>
 								<div class="slide-right">
 									<img src="./images/lession_detail/content_slide_2.jpg" height="934" width="100%">
@@ -193,7 +193,7 @@
 									<div class="slide-menu-txt">
 										我的需求与此项目类似
 									</div>
-									<button type="button" class="slide-btn">咨询服务</button>
+									<button type="button" class="slide-btn qq-kefu">咨询服务</button>
 								</div>
 								<div class="slide-right">
 									<img src="./images/lession_detail/content_slide_3.jpg" height="934" width="100%">
@@ -265,7 +265,7 @@
 						<div class="slide-menu-txt">
 							我的需求与此合作类似
 						</div>
-						<button type="button" class="slide-btn">免费预约</button>	
+						<button type="button" class="slide-btn qq-kefu">免费预约</button>	
 					</div>
 					<img class="layer" data-depth="0.30" src="./images/lession_detail/content3/layer.png">
 				</div>
@@ -283,7 +283,7 @@
 								<div class="slide-menu-txt">
 									我的需求与此合作类似
 								</div>
-								<button type="button" class="slide-btn">咨询服务</button>	
+								<button type="button" class="slide-btn qq-kefu">咨询服务</button>	
 							</div>
 						</div>
 					</div>
