--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 				</div>
 			</div>
 			<div class="lession-items clearfix">
-				<div class="item item1">
+				<div class="item item1" data-active="2">
 					<div class="layer forward" data-depth="0.30">
 						<div class="item-bottom">
 							<div class="l-box">
@@ -399,7 +399,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item item2 show480">
+				<div class="item item2 show480" data-active="4">
 					<div class="layer forward" data-depth="0.30">
 						<div class="item-bottom">
 							<div class="l-box">
@@ -414,7 +414,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item item2 hide480">
+				<div class="item item2 hide480" data-active="4">
 					<div class="layer forward" data-depth="0.30">
 						<div class="item-top">
 							<img class="lession-img" src="images/lession/lession_item_02.jpg">
@@ -429,7 +429,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="item item3">
+				<div class="item item3" data-active="1">
 					<div class="layer forward" data-depth="0.30">
 						<div class="item-bottom">
 							<div class="l-box">
