--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
 						<div class="footer-contact">
 							<p class="address">南京市 浦口区 团结路99号 孵鹰大厦 A205</p>
 							<p class="tel">+86&nbsp;&nbsp;025-58206840&nbsp;&nbsp;&nbsp;&nbsp;18951614092</p>
-							<p class="mail">邮箱： 3348656075@qq.com</p>
+							<p class="mail">邮箱： ana@yiqi-media.cn</p>
 						</div>
 					</div>
 				</div>
