--- a/lession.html
+++ b/lession.html
@@ -82,7 +82,7 @@
 			<p>开展了数十场内容丰富、专题明确的线下实训课程</p>
 		</div>
 		<!-- 课程介绍 -->
-		<div id="lession" class="le-lession">
+		<div id="lession" class="le-lession" name="lession">
 			<div class="le-nav">
 				<div class="le-logo">
 					<img src="./images/lession_detail/le_nav_logo.png">
